@@ -23,6 +23,7 @@ NOCC 1.3    ?? ??, 200?
     * Bug #1518887 : errors when enable preferences (Arnaud Boudou).
 
   Patches
+    * Patch #1574348 : form margin cause layout flaws in IE (Tim Gerundt).
     * Patch #1574328 : Missing parameters for htmlentities() in menu_mail.php
       (Tim Gerundt).
     * Patch #1572760 : Display structured text (Tim Gerundt).
